framework setup: copy from last year, automatic download