@@ -1,5 +1,7 @@
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
-    kotlin("jvm") version "1.8.21"
+    kotlin("jvm") version "1.9.20"
     application
 }
 
@@ -8,10 +10,17 @@ version = "1.0-SNAPSHOT"
 
 repositories {
     mavenCentral()
+    maven("https://jitpack.io")
 }
 
 dependencies {
+    implementation(kotlin("reflect"))
+    implementation("com.github.jkcclemens:khttp:-SNAPSHOT")
     testImplementation(kotlin("test"))
+}
+
+tasks.named<JavaExec>("run") {
+    standardInput = System.`in`
 }
 
 tasks.test {
@@ -19,9 +28,17 @@ tasks.test {
 }
 
 kotlin {
-    jvmToolchain(11)
+    jvmToolchain(17)
+}
+
+tasks.withType<KotlinCompile> {
+    kotlinOptions.jvmTarget = "17"
 }
 
 application {
-    mainClass.set("MainKt")
+    mainClass.set("com.staricka.adventofcode2023.framework.MainKt")
+    applicationDefaultJvmArgs = listOf(
+        "--add-opens", "java.base/java.net=ALL-UNNAMED",
+        "--add-opens", "java.base/sun.net.www.protocol.https=ALL-UNNAMED"
+    )
 }
